--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -45,13 +45,28 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
         Name & Description & Reference\\
         \midrule
         MEK2324 & MG1655, \textit{recB1080::halotag HK022::psfiA-GFP} & \\ % Alessia's article
-        MEK2622 & MG1655, \textit{recB::halotag $\Delta$recA} & \\ % = AL133_1, is this published? It should also have a previous MEK number
+        MEK2622 & MG1655, \textit{recB::halotag $\Delta$recA} & this work \\ % = AL133_1
         MEK2623 & MG1655, \textit{recB::halotag recA::syfp2} & this work\\
         MEK2627 & MG1655, \textit{recB1080::halotag $\Delta$recA} & this work \\
-         \bottomrule
+        \bottomrule
     \end{tabular}
     \caption{List of bacterial strains used in this study}
     \label{SItab:strains}
+\end{supptable}
+
+% Plasmids table
+\begin{supptable}[htbp]
+    \centering
+    \begin{tabular}{lll}
+        \toprule
+        Name & Description & Reference\\
+        \midrule
+        pDT5 & Halo-tag inserted into pBAD33 by restriction cloning & this work \\
+        pDT6 & GamL inserted into pBAD322K by restriction cloning & \cite{Wilkinson2016} \\
+        \bottomrule
+    \end{tabular}
+    \caption{List of bacterial plasmids used in this study}
+    \label{SItab:plasmids}
 \end{supptable}
 
 % Data analysis pipeline
