Added some 1080 refs

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -109,3 +109,51 @@
    volume = {5},
    year = {2016},
 }
+@article{Yu1998,
+   abstract = {The recombinational hot spot X modulates the nuclease and helicase activities of the RecBCD enzyme, leading to generation of an early DNA intermediate for homologous recombination. Here we identify the subunit location of the nuclease active site in RecBCD. The isolated RecB protein cleaves circular single-stranded M13 phage DNA, but RecB1-929, comprising only the 100 kDa N-terminal domain of RecB, does not. We reported previously that the reconstituted RecB1-929CD enzyme also is not a nuclease, suggesting that the C-terminal 30 kDa domain of RecB is a non-specific ssDNA endonuclease. However, we were unable to detect nuclease activity with the subtilisin-generated C-terminal 30 kDa fragment of RecB. Since the subtilisin-generated fragment did not bind to a ssDNA-agarose column, we designed a chimeric enzyme by attaching the C-terminal 30 kDa domain of RecB to the gene 32 protein of T4 phage, a ssDNA binding protein that does not have strand scission ability. In addition, Asp427 in the chimeric enzyme (Asp1080 in RecB), a residue that is conserved among several RecB homologs, was substituted to alanine (the D427A mutant). The wild-type chimeric enzyme cleaves the M13 DNA and the D427A mutation abolishes the endonuclease activity of the chimeric enzyme but does not affect its DNA binding ability. This finding indicates an unusual bipartite nature in the structural organization of RecB, in which the DNA-binding function is located in the N-terminal 100 kDa domain and the nuclease catalytic domain is located in the C-terminal 30 kDa domain. The purified RecB(D1080A)CD mutant is a processive helicase but not a nuclease, demonstrating that RecBCD has a single nuclease active site in the C terminal 30 kDa domain of RecB.},
+   author = {Misook Yu and Jehanne Souaya and Douglas A. Julin},
+   doi = {10.1006/JMBI.1998.2127},
+   issn = {0022-2836},
+   issue = {4},
+   journal = {Journal of Molecular Biology},
+   keywords = {Chi sequence,Endonuclease,Gene 32 protein,RecBCD,Recombination},
+   month = {11},
+   pages = {797-808},
+   pmid = {9790841},
+   publisher = {Academic Press},
+   title = {Identification of the nuclease active site in the multifunctional RecBCD enzyme by creation of a chimeric enzyme},
+   volume = {283},
+   year = {1998},
+}
+@article{Anderson1999,
+   abstract = {Homologous recombination and double-stranded DNA break repair in Escherichia coli are initiated by the multifunctional RecBCD enzyme. After binding to a double-stranded DNA end, the RecBCD enzyme unwinds and degrades the DNA processively. This processing is regulated by the recombination hot spot, Chi (χ: 5'-GCTGGTGG-3'), which induces a switch in the polarity of DNA degradation and activates RecBCD enzyme to coordinate the loading of the DNA strand exchange protein, RecA, onto the single-stranded DNA products of unwinding. Recently, a single mutation in RecB, Asp-1080 → Ala, was shown to create an enzyme (RecB(D1080A)CD) that is a processive helicase but not a nuclease. Here we show that the RecB(D1080A)CD enzyme is also unable to coordinate the loading of the RecA protein, regardless of whether χ sites are present in the DNA. However, the RecB(D1080A)CD enzyme does respond to χ sites by inactivating in a χ-dependent manner. These data define a locus of the RecBCD enzyme that is essential not only for nuclease function but also for the coordination of RecA protein loading.},
+   author = {Daniel G. Anderson and Jason J. Churchill and Stephen C. Kowalczykowski},
+   doi = {10.1074/jbc.274.38.27139},
+   issn = {00219258},
+   issue = {38},
+   journal = {Journal of Biological Chemistry},
+   month = {9},
+   pages = {27139-27144},
+   pmid = {10480929},
+   publisher = {Elsevier},
+   title = {A single mutation, RecB(D1080A), eliminates RecA protein loading but not Chi recognition by RecBCD enzyme},
+   volume = {274},
+   url = {http://www.jbc.org/article/S0021925819551365/fulltext http://www.jbc.org/article/S0021925819551365/abstract https://www.jbc.org/article/S0021-9258(19)55136-5/abstract},
+   year = {1999},
+}
+@article{,
+   abstract = {The RecA loading activity of the RecBCD enzyme, together with its helicase and 5′ → 3′ exonuclease activities, is essential for recombination in Escherichia coli. One particular mutant in the nuclease catalytic center of RecB, i.e., recB1080, produces an enzyme that does not have nuclease activity and is unable to load RecA protein onto single-stranded DNA. There are, however, previously published contradictory data on the recombination proficiency of this mutant. In a recF- background the recB1080 mutant is recombination deficient, whereas in a recF+ genetic background it is recombination proficient. A possible explanation for these contrasting phenotypes may be that the RecFOR system promotes RecA-single-strand DNA filament formation and replaces the RecA loading defect of the RecB1080CD enzyme. We tested this hypothesis by using three in vivo assays. We compared the recombination proficiencies of recB1080, rec0, recR, and RecF single mutants and recB1080 rec0, recB1080 recR, and recB1080 recF double mutants. We show that RecFOR functions rescue the repair and recombination deficiency of the recB1080 mutant and that RecA loading is independent of RecFOR in the recB1080 recD double mutant where this activity is provided by the RecB1080C(D-) enzyme. According to our results as well as previous data, three essential activities for the initiation of recombination in the recB1080 mutant are provided by different proteins, i.e., helicase activity by RecB1080CD, 5′ → 3′ exonuclease by RecJ- and RecA-single-stranded DNA filament formation by RecFOR.},
+   author = {Ivana Ivančić-Baće and Petra Peharec and Sunčana Moslavac and Nikolina Škrobot and Erika Salaj-Šmic and Krunoslav Brčić-Kostić},
+   doi = {10.1093/GENETICS/163.2.485},
+   issn = {00166731},
+   issue = {2},
+   journal = {Genetics},
+   month = {2},
+   pages = {485-494},
+   pmid = {12618388},
+   publisher = {Oxford Academic},
+   title = {RecFOR Function Is Required for DNA Repair and Recombination in a RecA Loading-Deficient recB Mutant of Escherichia coli},
+   volume = {163},
+   url = {https://dx.doi.org/10.1093/genetics/163.2.485},
+   year = {2003},
+}
