Add Achilles ref on position of DNA bound proteins

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -141,7 +141,7 @@
    url = {http://www.jbc.org/article/S0021925819551365/fulltext http://www.jbc.org/article/S0021925819551365/abstract https://www.jbc.org/article/S0021-9258(19)55136-5/abstract},
    year = {1999},
 }
-@article{Ivancic-Bace_2003,
+@article{,
    abstract = {The RecA loading activity of the RecBCD enzyme, together with its helicase and 5′ → 3′ exonuclease activities, is essential for recombination in Escherichia coli. One particular mutant in the nuclease catalytic center of RecB, i.e., recB1080, produces an enzyme that does not have nuclease activity and is unable to load RecA protein onto single-stranded DNA. There are, however, previously published contradictory data on the recombination proficiency of this mutant. In a recF- background the recB1080 mutant is recombination deficient, whereas in a recF+ genetic background it is recombination proficient. A possible explanation for these contrasting phenotypes may be that the RecFOR system promotes RecA-single-strand DNA filament formation and replaces the RecA loading defect of the RecB1080CD enzyme. We tested this hypothesis by using three in vivo assays. We compared the recombination proficiencies of recB1080, rec0, recR, and RecF single mutants and recB1080 rec0, recB1080 recR, and recB1080 recF double mutants. We show that RecFOR functions rescue the repair and recombination deficiency of the recB1080 mutant and that RecA loading is independent of RecFOR in the recB1080 recD double mutant where this activity is provided by the RecB1080C(D-) enzyme. According to our results as well as previous data, three essential activities for the initiation of recombination in the recB1080 mutant are provided by different proteins, i.e., helicase activity by RecB1080CD, 5′ → 3′ exonuclease by RecJ- and RecA-single-stranded DNA filament formation by RecFOR.},
    author = {Ivana Ivančić-Baće and Petra Peharec and Sunčana Moslavac and Nikolina Škrobot and Erika Salaj-Šmic and Krunoslav Brčić-Kostić},
    doi = {10.1093/GENETICS/163.2.485},
@@ -156,4 +156,20 @@
    volume = {163},
    url = {https://dx.doi.org/10.1093/genetics/163.2.485},
    year = {2003},
+}
+@article{Stracy2021,
+   abstract = {To understand how DNA-binding proteins find their target sites, Stracy et al. tracked the motion of 11 diverse proteins in living Escherichia coli. By comparing protein behavior in normal cells and cells without chromosomes, they showed that the DNA-binding proteins spend most of their search time bound to DNA.},
+   author = {Mathew Stracy and Jakob Schweizer and David J. Sherratt and Achillefs N. Kapanidis and Stephan Uphoff and Christian Lesterlin},
+   doi = {10.1016/J.MOLCEL.2021.01.039},
+   issn = {1097-2765},
+   issue = {7},
+   journal = {Molecular Cell},
+   keywords = {Chromosome-crowding,chromosome-free cells,single-molecule tracking,target search of bacterial DNA-binding proteins},
+   month = {4},
+   pages = {1499-1514.e6},
+   pmid = {33621478},
+   publisher = {Cell Press},
+   title = {Transient non-specific DNA binding dominates the target search of bacterial DNA-binding proteins},
+   volume = {81},
+   year = {2021},
 }
