Minor edits to mutants section

--- a/Results.tex
+++ b/Results.tex
@@ -105,26 +105,26 @@ We observe two regimes of DNA repair after ciprofloxacin exposure. At sub-MIC ci
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=\textwidth]{Figures/Fig5_mutants.pdf}
-    \caption{}
+    \caption{RecB binding to DNA (RecB spots with lifetime $>$10 sec) in the \dreca, \teneighty\ and \dreca-\teneighty\ mutant strains. (A) Number of long-lived DNA-bound RecB per cell area. Black dots represent individual datasets, and bars the average between them. (B) Position of long-lived DNA-bound RecB along the cell's long axis (normalised).}
     \label{Fig:mutants}
 \end{figure*}
 
 %% There are more RecB spot per cell area in the mutants (Fig 5A). Because the level of DNA damage (endogenous or ciprofloxacin) is the same, we have to conclude that this represents slower dissociation of RecB from DNA.
 %%% drecA has more RecB spots, both with and without cipro. This means that RecA plays a role in RecB dissociation from DNA, presumably associated with RecA loading
-Compared to wild-type cells, all tested mutants showed a higher number of RecB spots per cell area (Figure \ref{Fig:mutants}A). Since the level of DNA damage (endogenous or 30 ng/mL ciprofloxacin) was the same for wild-type and mutant cells, this higher number of RecB spots must represent a slower dissociation of RecB from DNA. In light of this, the increased number of RecB spots in the \dreca\ mutant suggests that RecA plays a role in RecB dissociation from DNA, presumably associated with RecB's role in RecA loading.
+Compared to wild-type cells, all mutants showed a higher number of long-lived DNA-bound RecB per cell area (Figure \ref{Fig:mutants}A). Since the level of DNA damage (endogenous or 30 ng/mL ciprofloxacin) was the same for wild-type and mutant cells, this higher number of DNA-bound RecB must represent a slower dissociation of RecB from DNA. In light of this, the increased number of DNA-bound RecB in the \dreca\ mutant suggests that RecA contributes directly or indirectly to RecB dissociation from DNA, presumably during its loading on DNA by RecB.
 
 %%% RecB1080 has even more spots than drecA. This means something else than RecA loading deficiency must make RecB dissociation difficult. We can hypothesise that it's RecB nuclease deficiency, which might make it hard for RecBCD to come off the DNA once it's threaded in
-The \teneighty\ mutant is deficient in RecA loading, and nuclease activity.\cite{} It can bind DSBs and unwind the DNA duplex, but does not degrade the unwound strands. Even though it is unable to directly promote RecA loading, this still happens through an alternative pathway implicating RecJ and RecFOR.\cite{} Both in the presence and absence of ciprofloxacin, the \teneighty\ mutant shows more RecB spots than the WT or the \dreca\ mutant (\ref{Fig:mutants}A). This suggests that the increased lifetime of \teneighty\ on the DNA is not only due to its deficiency in RecA loading but also to the absence of its nuclease activity. Unwinding DNA without digesting it might make dissociation more challenging due to the DNA strands threading through the RecBCD complex.
+The \teneighty\ mutant is deficient in nuclease activity\cite{Yu1998, Anderson1999} and RecA loading\cite{Anderson1999}. It can bind DSBs and unwind the DNA duplex, but does not degrade the unwound strands. Even though it is unable to directly promote RecA loading, this still happens through an alternative pathway implicating RecJ and RecFOR.\cite{Ivancic-Bace_2003} Both in the presence and absence of ciprofloxacin, the \teneighty\ mutant shows more DNA-bound RecB than the WT or the \dreca\ mutant (\ref{Fig:mutants}A). This suggests that the increased lifetime of \teneighty\ on the DNA is not only due to its deficiency in RecA loading but also to the absence of its nuclease activity. It is possible that unwinding DNA without digesting makes dissociation more challenging due to the DNA strands threading through the RecBCD complex.
 
 %%% Entirely removing RecA in a 1080 background increases again the number of RecB spots per cell area, i.e. reduces the dissociation rate. This means in 1080 single-mutant, RecA still helps to dissociate RecB, presumably thanks to its loading by RecFOR.
-Finally, the \dreca-\teneighty\ double-mutant displays a slight increase in the number of DNA-bound RecB per cell area compared to the \teneighty\ single-mutant (\ref{Fig:mutants}A). This means that in the \teneighty\ single-mutant, RecA still helps RecB to dissociate, presumably thanks to its loading by RecFOR.
+Finally, the \dreca-\teneighty\ double-mutant displays a slight increase in the number of DNA-bound RecB per cell area compared to the \teneighty\ single-mutant (\ref{Fig:mutants}A). This means that in the \teneighty\ single-mutant, RecA still contributes to RecB dissociation from DNA, presumably thanks to its loading by RecFOR.
 
 %% RecB spots in ΔrecA and/or 1080 background in the presence of ciprofloxacin are not centred as in WT.
 %%% In ΔrecA there is no centring and even a slight "exclusion" of spots from the centre of the cell. This confirms the involvement of the SOS response in RecB spot centring.
-Upon addition of high concentrations of ciprofloxacin (20-30 ng/mL), DNA-bound RecB molecules were mainly found in the centre of the cell (Figure \ref{Fig:high_cipro}A), which we attributed to SOS-dependent compaction of the bacterial chromosome. In the \dreca\ mutant at 30 ng/mL ciprofloxacin, DNA-bound RecB were found throughout the cell, with a slightly lower density towards the centre (Figure \ref{Fig:mutants}C). This pattern is similar to what would be expected of a DNA-bound protein in the absence of chromosome compaction (cite an Achilles article here?). This observation reinforces the idea that the centring of DNA-bound RecB observed in the wild-type under high ciprofloxacin depends on the SOS response.
+Upon addition of high concentrations of ciprofloxacin (20-30 ng/mL) to wild-type cells, DNA-bound RecB molecules were mainly found in the centre of the cell (Figure \ref{Fig:high_cipro}A), consistently with SOS-dependent compaction of the bacterial chromosome. In the \dreca\ mutant at 30 ng/mL ciprofloxacin, DNA-bound RecB were found throughout the cell, with a slightly lower density towards the centre (Figure \ref{Fig:mutants}B). This pattern is similar to what would be expected of a DNA-bound protein in the absence of chromosome compaction\cite{Stracy2021}. This observation reinforces the idea that the centring of DNA-bound RecB observed in the wild-type under high ciprofloxacin depends on the SOS response.
 
 %%% In 1080 there is no centring, but also no exclusion from the centre of the cell. This might correspond to a "mixed" population, where only a few spots get centred due to the delay in the SOS response
-Interestingly, in the \teneighty\ mutant a more even distribution of DNA-bound RecB is observed. The density of bound molecules is not reduced at the centre of the cell, as was observed in the \dreca\ mutant (Figure \ref{Fig:mutants}C). This could be attributed to partial or delayed chromosome compaction, due to the largely reduced efficiency of RecA loading in the \teneighty\ mutant.
+Interestingly, in the \teneighty\ mutant a more even distribution of DNA-bound RecB is observed. The density of bound molecules is not reduced at the centre of the cell, as was observed in the \dreca\ mutant (Figure \ref{Fig:mutants}C). This could be attributed to a significantly delayed chromosome compaction, due to the largely reduced efficiency of RecA loading in the \teneighty\ mutant.
 
 %%% In the double-mutant spots are again excluded from the cell centre, similarly to ΔrecA single mutant. This makes sense, as there will also be no SOS response in the double-mutant.
 Finally, in the \dreca-\teneighty\ double-mutant, DNA-bound RecB molecules seem to adopt a similar phenotype to the \dreca\ single-mutant, where the density of molecules is reduced at the centre of the cell, consistent with a complete absence of SOS induction, and therefore no chromosome compaction.
