Wrote the first sentence

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -2,13 +2,13 @@
 
 % Repairing DSBs is important for cells
 % This is a very short paragraph, maybe even just 1-2 sentences to introduce what comes next
-
+DNA double-strand breaks (DSBs) can arise from various sources (gamma radiation, antibiotic exposure, collision of the replication fork with DNA-bound proteins), and pose a serious threat to the integrity of bacterial cells. In \emph{E. coli}, DSBs are repaired through the RecBCD pathway
 
 % DSBs can occur through different processes, and isolated instances are “easy” to deal with
 % Review litt on endogenous damage? Michel & Leach papers
-% Try to paint a picture of DSB repair that’s more complete than just “clean breaks” (fork reversal)
-% This could make for a good intro figure, e.g. 2 “simple cases”: fork reversal due to obstacle on the DNA, and clean break (because of UV, nuclease,…). This figure shouldn’t mention cipro yet, because that will be in our results.
-% Emphasise that fork reversals are easier to deal with, because the homologous sequence is very close
+% Try to paint a picture of DSB repair that’s more complete than just “clean breaks” (i.e. include fork reversals)
+% This could make for a good intro figure, e.g. 2 “simple cases”: fork reversal due to obstacle on the DNA, and clean break (because of UV, nuclease,…). This figure shouldn’t mention cipro/gyrase, because we don't really know what happens there.
+% Emphasise that fork reversals are easier (and faster) to deal with, because of dsDNA digestion, or because the homologous sequence is very close
 
 
 % Antibiotics such as ciprofloxacin can cause massive amounts of damage
